test_programs/compile_failure/test_invalid_argument_type/src/main.nr
fn main() {}

#[test]
fn test(_arg: &mut i32) {}
